--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "10-e-commerce-api",
+  "name": "06-jobs-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +21,7 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "validator": "^13.6.0",
